--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".activity.DetailsActivity"/>
+        <activity android:name=".activity.ReviewsActivity"/>
     </application>
 
 </manifest>
