--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,10 @@ allprojects {
         google()
         jcenter()
     }
+    ext {
+        roomVersion = '1.1.1'
+        archLifecycleVersion = '1.1.1'
+    }
 }
 
 task clean(type: Delete) {
